--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,27 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+ body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden; 
+  overflow-y: auto;   
+  scroll-behavior: smooth;
+}
+
+body::-webkit-scrollbar {    
+  display: none;
+}
+
+.brand-logo {
+  color: #fff;
+  text-shadow: 0 1px 8px #253672;
+}
+
+.font-script {
+  font-family: 'Pacifico', cursive;
+}
+
